[gd_scene load_steps=12 format=3 uid="uid://dt20tjug8m6oh"]

[ext_resource type="StyleBox" uid="uid://comkghpj0djcl" path="res://Resources/UI/Panel.tres" id="1_54x78"]
[ext_resource type="StyleBox" uid="uid://dlbdmqmnl30sq" path="res://Resources/UI/PanelSelected.tres" id="2_wmblk"]
[ext_resource type="Script" uid="uid://0pxa4836hn6c" path="res://Scripts/UI/CustomLevelContainer.gd" id="3_t47t0"]
[ext_resource type="Texture2D" uid="uid://cn8bcncfmdikq" path="res://Assets/Sprites/UI/CustomLevelIconNight.png" id="4_jiwhq"]
[ext_resource type="Texture2D" uid="uid://dmggnqp6esawy" path="res://Assets/Sprites/UI/DifficultyStars.png" id="5_6ktlh"]
[ext_resource type="Texture2D" uid="uid://dfeu75lbxfkim" path="res://Assets/Sprites/UI/GameStyles.png" id="5_l0vwk"]
[ext_resource type="Script" uid="uid://d63p6qr5a748" path="res://Scripts/UI/AutoScrollContainer.gd" id="5_psjdr"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="7_t47t0"]
[ext_resource type="JSON" path="res://Assets/Sprites/UI/Cursor.json" id="8_l0vwk"]
[ext_resource type="Script" uid="uid://co6tjg3w6qpd8" path="res://Scripts/Parts/LabelFontChanger.gd" id="10_psjdr"]
[ext_resource type="Resource" uid="uid://8dcuxbc3h2u2" path="res://Resources/ThemedResources/Font.tres" id="11_jiigy"]

[node name="CustomLevelContainer" type="Button"]
custom_minimum_size = Vector2(0, 40)
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2
theme_override_styles/normal = ExtResource("1_54x78")
theme_override_styles/pressed = ExtResource("1_54x78")
theme_override_styles/hover = ExtResource("2_wmblk")
theme_override_styles/focus = ExtResource("2_wmblk")
button_mask = 0
script = ExtResource("3_t47t0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
grow_horizontal = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HSplitContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="LeftHalf" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LevelIcon" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
texture = ExtResource("4_jiwhq")
region_rect = Rect2(64, 64, 32, 32)

[node name="LevelInfo" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -4

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
horizontal_scroll_mode = 3
script = ExtResource("5_psjdr")

[node name="LevelName" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Level Name AIJOPDIOPJAWPDADAPDkaopD"
uppercase = true

[node name="ScrollContainer2" type="ScrollContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2
horizontal_scroll_mode = 3
script = ExtResource("5_psjdr")

[node name="LevelAuthor" type="Label" parent="MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer2"]
unique_name_in_owner = true
modulate = Color(0.47058824, 0.47058824, 0.47058824, 1)
layout_mode = 2
size_flags_horizontal = 3
text = "Level Name"
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer"]
layout_mode = 2

[node name="DifficultyStars" type="HBoxContainer" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0

[node name="Star1" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("5_6ktlh")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8

[node name="Star2" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("5_6ktlh")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8

[node name="Star3" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("5_6ktlh")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8

[node name="Star4" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("5_6ktlh")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8

[node name="Star5" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer/DifficultyStars"]
custom_minimum_size = Vector2(8, 0)
layout_mode = 2
texture = ExtResource("5_6ktlh")
region_rect = Rect2(0, 0, 8, 8)
patch_margin_bottom = 8

[node name="CampaignIcon" type="NinePatchRect" parent="MarginContainer/HBoxContainer/HSplitContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(42, 16)
layout_mode = 2
size_flags_vertical = 10
texture = ExtResource("5_l0vwk")
region_rect = Rect2(0, 0, 42, 16)

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -4.0
offset_bottom = 4.0
grow_vertical = 2

[node name="ResourceSetterNew" type="Node" parent="TextureRect" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("7_t47t0")
node_to_affect = NodePath("..")
property_name = "texture"
mode = 1
resource_json = ExtResource("8_l0vwk")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="LabelFontChanger" type="Node" parent="." node_paths=PackedStringArray("labels")]
script = ExtResource("10_psjdr")
labels = [NodePath("../MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer/LevelName"), NodePath("../MarginContainer/HBoxContainer/HSplitContainer/LeftHalf/LevelInfo/ScrollContainer2/LevelAuthor")]
resource = ExtResource("11_jiigy")
metadata/_custom_type_script = "uid://co6tjg3w6qpd8"

[connection signal="focus_entered" from="." to="TextureRect" method="show"]
[connection signal="focus_entered" from="." to="." method="set_process" binds= [true]]
[connection signal="focus_exited" from="." to="TextureRect" method="hide"]
[connection signal="focus_exited" from="." to="." method="set_process" binds= [false]]
